--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,8 +1,5 @@
 *{
     box-sizing: border-box;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 300;
 }
 
 body{
@@ -16,6 +13,9 @@ body{
     margin: 10vh 1vw 1vh 0;
     align-items: center;
     justify-content: center;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 300;
 }
 
 .image-container{
@@ -36,6 +36,24 @@ body{
 .info-container-title{
     font-weight: 700;
     font-size: 2.5rem;
+}
+
+.info-container-button{
+    background: #E4C1AE;
+    border: none;
+    border-radius: 32px;
+}
+
+#modal{
+    width: 60%;
+    padding: 0;
+}
+
+.dialog-box{
+    width: 100%;
+    height: 100%;
+    padding: 20px 20px 20px 50px;
+    margin: 0;
 }
 
 @media screen and (max-width: 700px){
