--- a/src/css/main.css
+++ b/src/css/main.css
@@ -19,31 +19,34 @@ body{
 }
 
 .image-container{
-    width: 30vw;
     margin-right: 5vw;
+    width: 30vw;
+    height: 20vw;
 }
 
-.image-container img{
+.image-container img {
     width: 100%;
     height: 100%;
 }
 
 .info-container{
-    width: 25vw;
+    width: 380px;
     font-size: 1rem;
 }
 
 .info-container-title{
     font-weight: 700;
     font-size: 2.5rem;
+    line-height: 120%;
 }
-
 .info-container-button{
+    margin-top: 2vh;
     background: #E4C1AE;
     border: none;
     border-radius: 32px;
     width: 128px;
     height: 48px;
+    color: #FFFFFF;
 }
 
 #modal{
@@ -71,6 +74,17 @@ body{
     pointer-events: none;
 }
 
+.close-modal{
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
+.close-modal::after{
+    content: "\00d7";
+    display: inline-block;
+}
+
 @media screen and (max-width: 700px){
     .main-container{
         flex-direction: column;
@@ -78,6 +92,9 @@ body{
     }
 
     .info-container, .image-container{
-        width: 90%;
+        width: 90vw;
+    }
+    .image-container{
+        height: 60vw;
     }
 }
